--- a/manga_web/requirements.txt
+++ b/manga_web/requirements.txt
@@ -4,6 +4,22 @@
 #
 #    pip-compile --output-file requirements.txt requirements.in
 #
+aiohttp==3.1.2
+amqp==2.2.2               # via kombu
+async-timeout==2.0.1      # via aiohttp
+attrs==17.4.0             # via aiohttp
+billiard==3.5.0.3         # via celery
+celery==4.1.0
+chardet==3.0.4            # via aiohttp
+django-celery-beat==1.1.1
+django-celery-results==1.0.1
 django==2.0.4
-psycopg2==2.7.4
-pytz==2018.3              # via django
+idna-ssl==1.0.1           # via aiohttp
+idna==2.6                 # via idna-ssl, yarl
+kombu==4.1.0              # via celery
+multidict==4.1.0          # via aiohttp, yarl
+psycopg2-binary==2.7.4
+pytz==2018.3              # via celery, django
+redis==2.10.6
+vine==1.1.4               # via amqp
+yarl==1.1.1               # via aiohttp
