--- a/manga_web/requirements.txt
+++ b/manga_web/requirements.txt
@@ -4,21 +4,17 @@
 #
 #    pip-compile --output-file requirements.txt requirements.in
 #
-aiohttp==3.1.2
 amqp==2.2.2               # via kombu
-async-timeout==2.0.1      # via aiohttp
-attrs==17.4.0             # via aiohttp
 billiard==3.5.0.3         # via celery
 celery==4.1.0
-chardet==3.0.4            # via aiohttp
 django-celery-beat==1.1.1
 django-celery-results==1.0.1
+django-contact-form==1.5
+django-recaptcha==1.4.0
+django-widget-tweaks==1.4.2
 django==2.0.4
-idna-ssl==1.0.1           # via aiohttp
-idna==2.6                 # via idna-ssl, yarl
 kombu==4.1.0              # via celery
 mediafire==0.6.0
-multidict==4.1.0          # via aiohttp, yarl
 psycopg2-binary==2.7.4
 pytz==2018.3              # via celery, django
 redis==2.10.6
@@ -27,4 +23,3 @@ requests==2.11.1          # via mediafire, requests-toolbelt
 six==1.11.0               # via mediafire
 unidecode==1.0.22
 vine==1.1.4               # via amqp
-yarl==1.1.1               # via aiohttp
