Upload to Amazon S3 instead of Mediafire

--- a/manga_web/requirements.in
+++ b/manga_web/requirements.in
@@ -4,8 +4,8 @@ redis
 django-celery-beat
 django-celery-results
 psycopg2-binary
-mediafire
 unidecode
 django-widget-tweaks
 django-recaptcha
 django-contact-form
+boto3
