--- a/manga_web/requirements.txt
+++ b/manga_web/requirements.txt
@@ -9,6 +9,8 @@ billiard==3.5.0.3         # via celery
 boto3==1.7.4
 botocore==1.10.4          # via boto3, s3transfer
 celery==4.1.0
+certifi==2018.10.15       # via requests
+chardet==3.0.4            # via requests
 django-celery-beat==1.1.1
 django-celery-results==1.0.1
 django-contact-form==1.5
@@ -16,13 +18,19 @@ django-recaptcha==1.4.0
 django-widget-tweaks==1.4.2
 django==2.0.4
 docutils==0.14            # via botocore
+get-fshare==2.2.1
+idna==2.7                 # via requests
 jmespath==0.9.3           # via boto3, botocore
 kombu==4.1.0              # via celery
+lxml==4.2.5               # via get-fshare
 psycopg2-binary==2.7.4
 python-dateutil==2.6.1    # via botocore
+python-dotenv==0.9.1
 pytz==2018.4              # via celery, django
 redis==2.10.6
+requests==2.20.0          # via get-fshare
 s3transfer==0.1.13        # via boto3
 six==1.11.0               # via python-dateutil
 unidecode==1.0.22
+urllib3==1.24             # via requests
 vine==1.1.4               # via amqp
