Add sentry and pushover

--- a/manga_web/.env.example
+++ b/manga_web/.env.example
@@ -8,3 +8,6 @@ GMAIL_PASSWORD=password
 VENV_PATH=venv_path
 FSHARE_EMAIL=fshare_email
 FSHARE_PASSWORD=fshare_password
+SENTRY_DSN=...
+PUSHOVER_APP_TOKEN=
+PUSHOVER_USER_KEY=
