--- a/manga_web/requirements.txt
+++ b/manga_web/requirements.txt
@@ -9,9 +9,11 @@ billiard==3.5.0.3         # via celery
 boto3==1.7.4
 botocore==1.10.4          # via boto3, s3transfer
 celery==4.1.0
-certifi==2018.10.15       # via requests
+certifi==2018.10.15       # via requests, sentry-sdk
 chardet==3.0.4            # via requests
+django-appconf==1.0.2     # via django-celery-email
 django-celery-beat==1.1.1
+django-celery-email==2.0.1
 django-celery-results==1.0.1
 django-contact-form==1.5
 django-recaptcha==1.4.0
@@ -30,7 +32,8 @@ pytz==2018.4              # via celery, django
 redis==2.10.6
 requests==2.20.0          # via get-fshare
 s3transfer==0.1.13        # via boto3
+sentry-sdk==0.6.4
 six==1.11.0               # via python-dateutil
 unidecode==1.0.22
-urllib3==1.24             # via requests
+urllib3==1.24             # via requests, sentry-sdk
 vine==1.1.4               # via amqp
