--- a/manga_web/requirements/base.in
+++ b/manga_web/requirements/base.in
@@ -21,3 +21,9 @@ django-htmx
 django-extensions
 django-cacheops
 flower
+scrapy-splash
+PyQt5>=5.6.0
+psutil>=5.0.0
+python-slugify>=1.2.1,<3.0.0
+raven>=6.0.0
+django-storages
