--- a/manga_web/requirements/base.in
+++ b/manga_web/requirements/base.in
@@ -1,9 +1,5 @@
 django
-celery
 redis
-django-celery-beat
-django-celery-results
-django-celery-email
 unidecode
 django-widget-tweaks
 django-recaptcha
@@ -22,11 +18,10 @@ django-extensions
 django-cacheops
 flower
 scrapy-splash
-PyQt5>=5.6.0
 psutil>=5.0.0
 python-slugify>=1.2.1,<3.0.0
-raven>=6.0.0
 django-storages
-cloudscraper
 django-filter
 ipython
+django-q
+django-q-email
