--- a/compose/local/django/Dockerfile
+++ b/compose/local/django/Dockerfile
@@ -55,9 +55,15 @@ RUN apt-get update && apt-get install --no-install-recommends -y \
   gettext \
   wget \
   curl \
+  unzip \
+  gnupg2 \
+  firefox-esr \
   # cleaning up unused files
   && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false \
   && rm -rf /var/lib/apt/lists/*
+
+
+ENV DISPLAY=:99
 
 # All absolute dir copies ignore workdir instruction. All relative dir copies are wrt to the workdir instruction
 # copy python dependency wheels from python-build-stage
